T5/Compilador-semiOK-antlr3/src/jjParser.java
// $ANTLR !Unknown version! jj.g 2013-11-06 23:09:26

package Compilador;
import Compilador.Semanticator;
import Compilador.Function;
import Compilador.Entrys;
import java.util.HashMap;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class jjParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COLON", "COMMA", "SEMI", "DOT", "PLUS", "MINUS", "STAR", "SLASH", "POWER", "LESS", "GREATER", "ASSIGN", "PERCENT", "LCURLY", "RCURLY", "EQUAL", "NOTEQUAL", "LESSEQUAL", "GREATEREQUAL", "AND", "OR", "NOT", "FALSE", "TRUE", "TO", "FOR", "REPEAT", "WHILE", "IF", "ELSE", "ELSEIF", "UNTIL", "DO", "WITH", "IN", "END", "RETURN", "CHEST", "THEN", "T_INT", "T_REAL", "T_STRING", "T_CHAIN", "T_VOID", "T_BOOL", "NAME", "INT", "FLOAT", "NORMALSTRING", "LETTER", "DIGIT", "EscapeSequence", "WS", "COMMENT", "LINE_COMMENT", "LETTERL", "LETTERU"
    };
    public static final int STAR=14;
    public static final int LBRACK=6;
    public static final int WHILE=35;
    public static final int LETTER=57;
    public static final int T_STRING=49;
    public static final int T_BOOL=52;
    public static final int GREATEREQUAL=26;
    public static final int FOR=33;
    public static final int DO=40;
    public static final int FLOAT=55;
    public static final int NOT=29;
    public static final int AND=27;
    public static final int EOF=-1;
    public static final int T_VOID=51;
    public static final int T_REAL=48;
    public static final int LPAREN=4;
    public static final int IF=36;
    public static final int NOTEQUAL=24;
    public static final int RPAREN=5;
    public static final int NAME=53;
    public static final int GREATER=18;
    public static final int SLASH=15;
    public static final int THEN=46;
    public static final int IN=42;
    public static final int COMMA=9;
    public static final int T_INT=47;
    public static final int EQUAL=23;
    public static final int RETURN=44;
    public static final int LESS=17;
    public static final int PLUS=12;
    public static final int DIGIT=58;
    public static final int COMMENT=61;
    public static final int DOT=11;
    public static final int WITH=41;
    public static final int RBRACK=7;
    public static final int PERCENT=20;
    public static final int LINE_COMMENT=62;
    public static final int TO=32;
    public static final int ELSE=37;
    public static final int POWER=16;
    public static final int LCURLY=21;
    public static final int INT=54;
    public static final int LETTERU=64;
    public static final int MINUS=13;
    public static final int CHEST=45;
    public static final int SEMI=10;
    public static final int TRUE=31;
    public static final int LETTERL=63;
    public static final int ELSEIF=38;
    public static final int COLON=8;
    public static final int NORMALSTRING=56;
    public static final int WS=60;
    public static final int T_CHAIN=50;
    public static final int UNTIL=39;
    public static final int RCURLY=22;
    public static final int OR=28;
    public static final int ASSIGN=19;
    public static final int REPEAT=34;
    public static final int END=43;
    public static final int FALSE=30;
    public static final int LESSEQUAL=25;
    public static final int EscapeSequence=59;

    // delegates
    // delegators


        public jjParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public jjParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return jjParser.tokenNames; }
    public String getGrammarFileName() { return "jj.g"; }


    Semanticator s = new Semanticator(this);



    // $ANTLR start "javax"
    // jj.g:100:1: javax : ( ( vardecl SEMI )* ( stat ) )+ ;
    public final void javax() throws RecognitionException {
        try {
            // jj.g:101:2: ( ( ( vardecl SEMI )* ( stat ) )+ )
            // jj.g:101:4: ( ( vardecl SEMI )* ( stat ) )+
            {
            // jj.g:101:4: ( ( vardecl SEMI )* ( stat ) )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==CHEST||(LA2_0>=T_INT && LA2_0<=T_BOOL)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // jj.g:101:5: ( vardecl SEMI )* ( stat )
            	    {
            	    // jj.g:101:5: ( vardecl SEMI )*
            	    loop1:
            	    do {
            	        int alt1=2;
            	        alt1 = dfa1.predict(input);
            	        switch (alt1) {
            	    	case 1 :
            	    	    // jj.g:101:6: vardecl SEMI
            	    	    {
            	    	    pushFollow(FOLLOW_vardecl_in_javax681);
            	    	    vardecl();

            	    	    state._fsp--;

            	    	    match(input,SEMI,FOLLOW_SEMI_in_javax683); 

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop1;
            	        }
            	    } while (true);

            	    // jj.g:101:20: ( stat )
            	    // jj.g:101:21: stat
            	    {
            	    pushFollow(FOLLOW_stat_in_javax687);
            	    stat();

            	    state._fsp--;


            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "javax"


    // $ANTLR start "stat"
    // jj.g:104:1: stat : ( def_func | def_chest );
    public final void stat() throws RecognitionException {
        try {
            // jj.g:105:2: ( def_func | def_chest )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=T_INT && LA3_0<=T_BOOL)) ) {
                alt3=1;
            }
            else if ( (LA3_0==CHEST) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // jj.g:105:4: def_func
                    {
                    pushFollow(FOLLOW_def_func_in_stat702);
                    def_func();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // jj.g:106:4: def_chest
                    {
                    pushFollow(FOLLOW_def_chest_in_stat710);
                    def_chest();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "stat"


    // $ANTLR start "weakstat"
    // jj.g:109:1: weakstat returns [ String type ] : ( varatrib SEMI | vardecl SEMI | funccall SEMI | def_if | def_while | t= def_return SEMI | chestaccess SEMI | def_repeat );
    public final String weakstat() throws RecognitionException {
        String type = null;

        String t = null;


        try {
            // jj.g:110:2: ( varatrib SEMI | vardecl SEMI | funccall SEMI | def_if | def_while | t= def_return SEMI | chestaccess SEMI | def_repeat )
            int alt4=8;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // jj.g:110:4: varatrib SEMI
                    {
                    pushFollow(FOLLOW_varatrib_in_weakstat725);
                    varatrib();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_weakstat727); 

                    }
                    break;
                case 2 :
                    // jj.g:111:4: vardecl SEMI
                    {
                    pushFollow(FOLLOW_vardecl_in_weakstat733);
                    vardecl();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_weakstat739); 

                    }
                    break;
                case 3 :
                    // jj.g:112:4: funccall SEMI
                    {
                    pushFollow(FOLLOW_funccall_in_weakstat745);
                    funccall();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_weakstat747); 

                    }
                    break;
                case 4 :
                    // jj.g:113:4: def_if
                    {
                    pushFollow(FOLLOW_def_if_in_weakstat753);
                    def_if();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // jj.g:114:4: def_while
                    {
                    pushFollow(FOLLOW_def_while_in_weakstat762);
                    def_while();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // jj.g:115:4: t= def_return SEMI
                    {
                    pushFollow(FOLLOW_def_return_in_weakstat773);
                    t=def_return();

                    state._fsp--;

                    type =t;
                    match(input,SEMI,FOLLOW_SEMI_in_weakstat777); 

                    }
                    break;
                case 7 :
                    // jj.g:116:4: chestaccess SEMI
                    {
                    pushFollow(FOLLOW_chestaccess_in_weakstat783);
                    chestaccess();

                    state._fsp--;

                    match(input,SEMI,FOLLOW_SEMI_in_weakstat785); 

                    }
                    break;
                case 8 :
                    // jj.g:117:4: def_repeat
                    {
                    pushFollow(FOLLOW_def_repeat_in_weakstat794);
                    def_repeat();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return type;
    }
    // $ANTLR end "weakstat"


    // $ANTLR start "varatrib"
    // jj.g:120:1: varatrib : n= NAME ASSIGN t= logic_op_expr ;
    public final void varatrib() throws RecognitionException {
        Token n=null;
        String t = null;


        try {
            // jj.g:121:2: (n= NAME ASSIGN t= logic_op_expr )
            // jj.g:121:5: n= NAME ASSIGN t= logic_op_expr
            {
            n=(Token)match(input,NAME,FOLLOW_NAME_in_varatrib809); 
            match(input,ASSIGN,FOLLOW_ASSIGN_in_varatrib811); 
            pushFollow(FOLLOW_logic_op_expr_in_varatrib815);
            t=logic_op_expr();

            state._fsp--;

             s.eval_assign(s.get_type(n.getText()), t, n.getText()); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "varatrib"


    // $ANTLR start "vardecl"
    // jj.g:124:1: vardecl : t= type v= NAME ( COMMA v= NAME )* ;
    public final void vardecl() throws RecognitionException {
        Token v=null;
        String t = null;


        try {
            // jj.g:125:2: (t= type v= NAME ( COMMA v= NAME )* )
            // jj.g:125:5: t= type v= NAME ( COMMA v= NAME )*
            {
            pushFollow(FOLLOW_type_in_vardecl831);
            t=type();

            state._fsp--;

            v=(Token)match(input,NAME,FOLLOW_NAME_in_vardecl835); 
             s.add_variable(v.getText(), t);
            // jj.g:125:55: ( COMMA v= NAME )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // jj.g:125:56: COMMA v= NAME
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_vardecl841); 
            	    v=(Token)match(input,NAME,FOLLOW_NAME_in_vardecl845); 
            	     s.add_variable(v.getText(), t);

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "vardecl"


    // $ANTLR start "funccall"
    // jj.g:128:1: funccall returns [ String type ] : n= NAME LPAREN h= arglist RPAREN ;
    public final String funccall() throws RecognitionException {
        String type = null;

        Token n=null;
        HashMap<String,String> h = null;


        try {
            // jj.g:129:2: (n= NAME LPAREN h= arglist RPAREN )
            // jj.g:129:5: n= NAME LPAREN h= arglist RPAREN
            {
            n=(Token)match(input,NAME,FOLLOW_NAME_in_funccall870); 
            match(input,LPAREN,FOLLOW_LPAREN_in_funccall872); 
            pushFollow(FOLLOW_arglist_in_funccall876);
            h=arglist();

            state._fsp--;

            match(input,RPAREN,FOLLOW_RPAREN_in_funccall878); 
             type =s.eval_funccall(n.getText(), h);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return type;
    }
    // $ANTLR end "funccall"


    // $ANTLR start "def_func"
    // jj.g:132:1: def_func : t= type n= NAME LPAREN h= typedarglist RPAREN (tw= weakstat )* END ;
    public final void def_func() throws RecognitionException {
        Token n=null;
        String t = null;

        HashMap<String,String> h = null;

        String tw = null;


        try {
            // jj.g:133:2: (t= type n= NAME LPAREN h= typedarglist RPAREN (tw= weakstat )* END )
            // jj.g:133:5: t= type n= NAME LPAREN h= typedarglist RPAREN (tw= weakstat )* END
            {
            pushFollow(FOLLOW_type_in_def_func896);
            t=type();

            state._fsp--;

            n=(Token)match(input,NAME,FOLLOW_NAME_in_def_func900); 
            match(input,LPAREN,FOLLOW_LPAREN_in_def_func902); 
            pushFollow(FOLLOW_typedarglist_in_def_func906);
            h=typedarglist();

            state._fsp--;

            match(input,RPAREN,FOLLOW_RPAREN_in_def_func908); 
            s.open_function_decl(t,h,n.getText());
            // jj.g:134:47: (tw= weakstat )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=REPEAT && LA6_0<=IF)||LA6_0==RETURN||(LA6_0>=T_INT && LA6_0<=NAME)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // jj.g:134:47: tw= weakstat
            	    {
            	    pushFollow(FOLLOW_weakstat_in_def_func918);
            	    tw=weakstat();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            s.close_function_decl(tw);
            match(input,END,FOLLOW_END_in_def_func923); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "def_func"


    // $ANTLR start "def_if"
    // jj.g:137:1: def_if : IF logic_op_expr THEN ( weakstat )* ( END | ( ELSE ( weakstat )* END ) ) ;
    public final void def_if() throws RecognitionException {
        try {
            // jj.g:138:2: ( IF logic_op_expr THEN ( weakstat )* ( END | ( ELSE ( weakstat )* END ) ) )
            // jj.g:138:5: IF logic_op_expr THEN ( weakstat )* ( END | ( ELSE ( weakstat )* END ) )
            {
            match(input,IF,FOLLOW_IF_in_def_if936); 
            pushFollow(FOLLOW_logic_op_expr_in_def_if938);
            logic_op_expr();

            state._fsp--;

            match(input,THEN,FOLLOW_THEN_in_def_if940); 
            // jj.g:138:27: ( weakstat )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( ((LA7_0>=REPEAT && LA7_0<=IF)||LA7_0==RETURN||(LA7_0>=T_INT && LA7_0<=NAME)) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // jj.g:138:27: weakstat
            	    {
            	    pushFollow(FOLLOW_weakstat_in_def_if942);
            	    weakstat();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            // jj.g:138:37: ( END | ( ELSE ( weakstat )* END ) )
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==END) ) {
                alt9=1;
            }
            else if ( (LA9_0==ELSE) ) {
                alt9=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }
            switch (alt9) {
                case 1 :
                    // jj.g:138:39: END
                    {
                    match(input,END,FOLLOW_END_in_def_if947); 

                    }
                    break;
                case 2 :
                    // jj.g:138:45: ( ELSE ( weakstat )* END )
                    {
                    // jj.g:138:45: ( ELSE ( weakstat )* END )
                    // jj.g:138:47: ELSE ( weakstat )* END
                    {
                    match(input,ELSE,FOLLOW_ELSE_in_def_if953); 
                    // jj.g:138:52: ( weakstat )*
                    loop8:
                    do {
                        int alt8=2;
                        int LA8_0 = input.LA(1);

                        if ( ((LA8_0>=REPEAT && LA8_0<=IF)||LA8_0==RETURN||(LA8_0>=T_INT && LA8_0<=NAME)) ) {
                            alt8=1;
                        }


                        switch (alt8) {
                    	case 1 :
                    	    // jj.g:138:52: weakstat
                    	    {
                    	    pushFollow(FOLLOW_weakstat_in_def_if955);
                    	    weakstat();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop8;
                        }
                    } while (true);

                    match(input,END,FOLLOW_END_in_def_if958); 

                    }


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "def_if"


    // $ANTLR start "def_repeat"
    // jj.g:141:1: def_repeat : REPEAT ( weakstat )* UNTIL LPAREN logic_op_expr RPAREN END ;
    public final void def_repeat() throws RecognitionException {
        try {
            // jj.g:142:2: ( REPEAT ( weakstat )* UNTIL LPAREN logic_op_expr RPAREN END )
            // jj.g:142:5: REPEAT ( weakstat )* UNTIL LPAREN logic_op_expr RPAREN END
            {
            match(input,REPEAT,FOLLOW_REPEAT_in_def_repeat976); 
            // jj.g:142:12: ( weakstat )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( ((LA10_0>=REPEAT && LA10_0<=IF)||LA10_0==RETURN||(LA10_0>=T_INT && LA10_0<=NAME)) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // jj.g:142:12: weakstat
            	    {
            	    pushFollow(FOLLOW_weakstat_in_def_repeat978);
            	    weakstat();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);

            match(input,UNTIL,FOLLOW_UNTIL_in_def_repeat981); 
            match(input,LPAREN,FOLLOW_LPAREN_in_def_repeat983); 
            pushFollow(FOLLOW_logic_op_expr_in_def_repeat985);
            logic_op_expr();

            state._fsp--;

            match(input,RPAREN,FOLLOW_RPAREN_in_def_repeat987); 
            match(input,END,FOLLOW_END_in_def_repeat989); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "def_repeat"


    // $ANTLR start "def_chest"
    // jj.g:145:1: def_chest : CHEST NAME COLON ( vardecl SEMI | funccall SEMI )* END ;
    public final void def_chest() throws RecognitionException {
        try {
            // jj.g:146:2: ( CHEST NAME COLON ( vardecl SEMI | funccall SEMI )* END )
            // jj.g:146:4: CHEST NAME COLON ( vardecl SEMI | funccall SEMI )* END
            {
            match(input,CHEST,FOLLOW_CHEST_in_def_chest1001); 
            match(input,NAME,FOLLOW_NAME_in_def_chest1003); 
            match(input,COLON,FOLLOW_COLON_in_def_chest1005); 
            // jj.g:146:21: ( vardecl SEMI | funccall SEMI )*
            loop11:
            do {
                int alt11=3;
                int LA11_0 = input.LA(1);

                if ( ((LA11_0>=T_INT && LA11_0<=T_BOOL)) ) {
                    alt11=1;
                }
                else if ( (LA11_0==NAME) ) {
                    alt11=2;
                }


                switch (alt11) {
            	case 1 :
            	    // jj.g:146:23: vardecl SEMI
            	    {
            	    pushFollow(FOLLOW_vardecl_in_def_chest1009);
            	    vardecl();

            	    state._fsp--;

            	    match(input,SEMI,FOLLOW_SEMI_in_def_chest1011); 

            	    }
            	    break;
            	case 2 :
            	    // jj.g:146:38: funccall SEMI
            	    {
            	    pushFollow(FOLLOW_funccall_in_def_chest1015);
            	    funccall();

            	    state._fsp--;

            	    match(input,SEMI,FOLLOW_SEMI_in_def_chest1017); 

            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);

            match(input,END,FOLLOW_END_in_def_chest1022); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "def_chest"


    // $ANTLR start "def_while"
    // jj.g:149:1: def_while : WHILE LPAREN logic_op_expr RPAREN ( weakstat )* END ;
    public final void def_while() throws RecognitionException {
        try {
            // jj.g:150:2: ( WHILE LPAREN logic_op_expr RPAREN ( weakstat )* END )
            // jj.g:150:4: WHILE LPAREN logic_op_expr RPAREN ( weakstat )* END
            {
            match(input,WHILE,FOLLOW_WHILE_in_def_while1033); 
            match(input,LPAREN,FOLLOW_LPAREN_in_def_while1035); 
            pushFollow(FOLLOW_logic_op_expr_in_def_while1037);
            logic_op_expr();

            state._fsp--;

            match(input,RPAREN,FOLLOW_RPAREN_in_def_while1039); 
            // jj.g:150:38: ( weakstat )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( ((LA12_0>=REPEAT && LA12_0<=IF)||LA12_0==RETURN||(LA12_0>=T_INT && LA12_0<=NAME)) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // jj.g:150:38: weakstat
            	    {
            	    pushFollow(FOLLOW_weakstat_in_def_while1041);
            	    weakstat();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);

            match(input,END,FOLLOW_END_in_def_while1044); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "def_while"


    // $ANTLR start "type"
    // jj.g:154:1: type returns [ String type ] : ( T_INT | T_REAL | T_STRING | T_BOOL | T_VOID | T_CHAIN );
    public final String type() throws RecognitionException {
        String type = null;

        try {
            // jj.g:155:2: ( T_INT | T_REAL | T_STRING | T_BOOL | T_VOID | T_CHAIN )
            int alt13=6;
            switch ( input.LA(1) ) {
            case T_INT:
                {
                alt13=1;
                }
                break;
            case T_REAL:
                {
                alt13=2;
                }
                break;
            case T_STRING:
                {
                alt13=3;
                }
                break;
            case T_BOOL:
                {
                alt13=4;
                }
                break;
            case T_VOID:
                {
                alt13=5;
                }
                break;
            case T_CHAIN:
                {
                alt13=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 13, 0, input);

                throw nvae;
            }

            switch (alt13) {
                case 1 :
                    // jj.g:155:4: T_INT
                    {
                    match(input,T_INT,FOLLOW_T_INT_in_type1061); 
                     type = "Integer"; 

                    }
                    break;
                case 2 :
                    // jj.g:156:4: T_REAL
                    {
                    match(input,T_REAL,FOLLOW_T_REAL_in_type1069); 
                     type = "Real"; 

                    }
                    break;
                case 3 :
                    // jj.g:157:4: T_STRING
                    {
                    match(input,T_STRING,FOLLOW_T_STRING_in_type1076); 
                     type = "String"; 

                    }
                    break;
                case 4 :
                    // jj.g:158:4: T_BOOL
                    {
                    match(input,T_BOOL,FOLLOW_T_BOOL_in_type1083); 
                     type = "Boolean"; 

                    }
                    break;
                case 5 :
                    // jj.g:159:4: T_VOID
                    {
                    match(input,T_VOID,FOLLOW_T_VOID_in_type1090); 
                     type = "Void"; 

                    }
                    break;
                case 6 :
                    // jj.g:160:4: T_CHAIN
                    {
                    match(input,T_CHAIN,FOLLOW_T_CHAIN_in_type1097); 
                     type = "Chain"; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return type;
    }
    // $ANTLR end "type"


    // $ANTLR start "term"
    // jj.g:163:1: term returns [ String type ] : (v= variable | f= funccall | n= number | str= string );
    public final String term() throws RecognitionException {
        String type = null;

        String v = null;

        String f = null;

        String n = null;

        String str = null;


        try {
            // jj.g:164:2: (v= variable | f= funccall | n= number | str= string )
            int alt14=4;
            switch ( input.LA(1) ) {
            case NAME:
                {
                int LA14_1 = input.LA(2);

                if ( (LA14_1==LPAREN) ) {
                    alt14=2;
                }
                else if ( (LA14_1==RPAREN||(LA14_1>=SEMI && LA14_1<=SLASH)||(LA14_1>=LESS && LA14_1<=GREATER)||LA14_1==PERCENT||(LA14_1>=EQUAL && LA14_1<=OR)||LA14_1==THEN) ) {
                    alt14=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 14, 1, input);

                    throw nvae;
                }
                }
                break;
            case INT:
            case FLOAT:
                {
                alt14=3;
                }
                break;
            case NORMALSTRING:
                {
                alt14=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 14, 0, input);

                throw nvae;
            }
